set JDK version to 11